# pgpro-pytest-html-merger

./: .gitignore  Dockerfile--alpine.tmpl  LICENSE  README.md  pyproject.toml  run_tests3.sh
.github/workflows/: ci.yml
src/pgpro_pytest_html_merger/: __main__.py
tests/: requirements.txt
tests/integration/: e2eworkspace.py  test_set001__cli.py  test_set002__e2e.py
tests/units/: __init__.py  helpers.py  test_set001__parse_frac.py  test_set002__parse_duration_to_seconds.py  test_set003__format_time.py  test_set004__pytest_report_env_prop_list_create.py  test_set005__pytest_report_env_prop_list_create__errors.py  test_set006__pytest_report_env_prop_id.py  test_set007__pytest_report_env_aggregator.py  test_set008__pytest_report_env_prop_list_build_dict.py
