[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgpro-pytest-html-merger"
version = "0.2.0"
description = "A professional tool to merge multiple pytest-html reports into a single one with consistent metadata"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
    {name = "Postgres Professional", email = "info@postgrespro.ru"}
]

dependencies = [
    "beautifulsoup4>=4.11.1",
    "packaging>=21.0",
]

[project.scripts]
pgpro-pytest-html-merger = "pgpro_pytest_html_merger.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pgpro_pytest_html_merger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file_level = "NOTSET"
log_file_format = "%(levelname)8s [%(asctime)s] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
extend-ignore = ["E501"]
exclude = [".git", "__pycache__", "env", "venv"]
