[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgpro-pytest-html-merger"
version = "0.3.0"
description = "A professional tool to merge multiple pytest-html reports into a single one with consistent metadata"
readme = "README.md"
license = "MIT"

authors = [
    {name = "Postgres Professional", email = "info@postgrespro.ru"}
]

requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Pytest",
]

dependencies = [
    "beautifulsoup4>=4.11.1",
    "packaging>=21.0",
]

[project.urls]
"HomePage" = "https://github.com/postgrespro/pgpro-pytest-html-merger"

[project.scripts]
pgpro-pytest-html-merger = "pgpro_pytest_html_merger.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pgpro_pytest_html_merger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file_level = "NOTSET"
log_file_format = "%(levelname)8s [%(asctime)s] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
extend-ignore = ["E501"]
exclude = [".git", "__pycache__", "env", "venv"]
